# chinook

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
chinook/: main.py
chinook/controller/: __init__.py  album.py  artist.py  customer.py  employee.py  genre.py  invoice.py  invoice_item.py  media_type.py  playlist.py  playlist_track.py  track.py  utils.py
notebooks/: chinook_restapi.ipynb
prisma/: albums.sql  artists.sql  chinook.prisma  customers.sql  employees.sql  genres.sql  invoice_items.sql  invoices.sql  media_types.sql  partial_types.py  playlist_track.sql  playlists.sql  sequences.sql  tracks.sql  truncate.sql
scripts/: create_database.py
tests/: conftest.py  test_get_all_items.py  test_get_first_item.py  test_post_item.py  test_put_item.py  utils.py
