[project]
name = "chinook"
version = "0.0.1"
description = "FastAPI wrapper example over a postgres database"
readme = "README.md"
authors = [{ name = "Ernan", email = "ernan@outlook.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = [
    "FastAPI",
    "Prisma",
    "REST API",
    "Postgres",
]
dependencies = ["fastapi", "uvicorn", "python-dotenv", "prisma"]
requires-python = ">=3.1"
[project.urls]
Homepage = "https://github.com/ernan/chinook"
[project.scripts]
application = "chinook.main:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

